yamls/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shoes-service-deployment
                port:
                  number: 8080
#          - path: /api/v1/book
#            pathType: Prefix
#            backend:
#              service:
#                name: books-service-service
#                port:
#                  number: 8080
